# Zhijian

./: .gitignore  CMakeLists.txt  ErrorMessage.md  README.md  test_gmsh_gen.py
examples/: config.txt
include/basis/: basis.hpp
include/bc/: boundary_condition.hpp
include/common/: cuda_device.cuh  cuda_utils.hpp  types.hpp
include/gpu/: kernels.hpp
include/io/: restart.hpp  visualization.hpp
include/mesh/: mesh.hpp
include/parallel/: mpi_comm.hpp
include/physics/: euler.hpp  navierstokes.hpp
include/solver/: fr_solver.hpp
include/time/: rk_integrator.hpp
src/: hdf5_compat.c  main.cpp
src/basis/: basis.cpp
src/bc/: boundary_condition.cpp
src/gpu/: kernels.cu
src/io/: restart.cpp  visualization.cpp
src/mesh/: cgns_reader.cpp  gmsh_reader.cpp  mesh.cpp  partitioner.cpp
src/parallel/: mpi_comm.cpp
src/solver/: fr_solver.cpp
test_meshes/: quad_v41.msh  serendipity_quad_v41.msh  tri_order2_v41.msh  tri_v22.msh  tri_v41.msh  uniform_quad_10x10.geo  uniform_quad_10x10.msh
